--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Mercado.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.1.48-bin.jar=C:\\Users\\user\\Desktop\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
     ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
